fixed overlap issue between nav and form input.

--- a/css/style.css
+++ b/css/style.css
@@ -10873,7 +10873,7 @@ center {
 
 input {
   position: relative;
-  z-index: 9999;
+  z-index: 1025;
 }
 
 .contact-stacked {
