--- a/sass/partials/_app.scss
+++ b/sass/partials/_app.scss
@@ -592,7 +592,7 @@ center{
 }
 input {
     position: relative;
-    z-index: 9999;
+    z-index: 1025;
 }
 
 .contact-stacked {
